# the-elder-maze

./: CMakeLists.txt  CMakeUserPresets.json  README.md  config.toml  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.BEE40B3A1880FCF2.idx
include/: Audio.h  Constants.h  Creature.h  Engine.h  Entity.h  Enums.h  Global.h  Graphics.h  Interface.h  Item.h  Items.h  Logger.h  MainMenu.h  Maze.h  Physics.h  Player.h  Renderer3D.h  Structs.h  i_renderable.h
resources/ascii/: alphabet  knight  logo  skull  sword  sword_2
resources/ascii/buttons/: new-game
src/: Audio.cpp  Creature.cpp  Engine.cpp  Entity.cpp  Global.cpp  Graphics.cpp  Interface.cpp  MainMenu.cpp  Maze.cpp  Physics.cpp  Player.cpp  Renderer3D.cpp
